kustomize/test/patch-ingress-repository.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alfresco-content-services-alfresco-repository
  annotations:
    external-dns.alpha.kubernetes.io/set-identifier: alfresco-content-services-alfresco-repository-hmpps-delius-alfresco-test-green
    nginx.ingress.kubernetes.io/whitelist-source-range: "placeholder"
spec:
  rules:
    - host: hmpps-delius-alfresco-test.apps.live.cloud-platform.service.justice.gov.uk
      http:
        paths:
          - backend:
              service:
                name: alfresco-content-services-alfresco-repository
                port:
                  number: 80
            path: /
            pathType: Prefix
          - backend:
              service:
                name: alfresco-content-services-alfresco-repository
                port:
                  number: 80
            path: /api-explorer
            pathType: Prefix
  tls:
    - hosts:
        - hmpps-delius-alfresco-test.apps.live.cloud-platform.service.justice.gov.uk
