kustomize/test/patch-pvc-filestore.yaml
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: filestore-default-pvc
spec:
  accessModes:
    - ReadWriteOnce
  storageClassName: gp3
  resources:
    requests:
      storage: "200Gi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  alfresco-content-services-filestore
spec:
  template:
    spec:
      containers:
        - name: alfresco-transform-service
          volumeMounts:
          - mountPath: /tmp/Alfresco
            name: data
            subPath: alfresco-content-services/filestore-default-pvc
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: filestore-default-pvc
